[package]
name = "MumbleLink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19.0"
lazy_static = "1.4.0"
mumble-link = { path = "../lib" }
mut_static = "5.0.0"
